--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "postcss": "8.4.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "swiper": "^9.2.3",
     "tailwindcss": "3.3.1",
     "typescript": "5.0.4"
   }
